# Intelligent-Contract-Approval-System

./: .env.example  alembic.ini  pyproject.toml  requirements.txt  run.py
alembic/: env.py  script.py.mako
alembic/versions/: 0001_init_create_all_tables.py  0002_phase3_ai_review.py
app/: main.py
app/core/: config.py  database.py  logging.py  security.py
app/middleware/: logging.py
app/models/: __init__.py  ai_review_result.py  attachment.py  base.py  comment_log.py  contract_parse.py  review_result.py  review_rule.py  rule_hit.py  task.py  task_log.py
app/schemas/: __init__.py  attachment.py  common.py  result.py  rule.py  task.py
app/services/: __init__.py  ai_orchestrator.py  ai_reviewer.py  approval_service.py  attachment_service.py  block_handler.py  comment_service.py  dedup_service.py  file_storage.py  parse_service.py  report_service.py  result_service.py  review_service.py  rule_engine.py  rule_evaluator.py  semantic_matcher.py  task_log_service.py
app/utils/: constants.py  response.py
scripts/: generate_test_contracts.py
tests/: conftest.py  test_main.py
tests/test_api/: test_admin_endpoints.py  test_ai_review_endpoints.py  test_approval_endpoints.py  test_attachment_endpoints.py  test_e2e_pipeline.py  test_orchestrate_endpoints.py  test_parse_endpoints.py  test_report_endpoints.py  test_results_and_comments_endpoints.py  test_rule_evaluation_endpoints.py  test_rules_endpoints.py
tests/test_services/: test_ai_orchestrator.py  test_ai_reviewer.py  test_approval_service.py  test_attachment_service.py  (+18 more)
uploads/: 采购合同_CG-2026-0718-001.docx
(+26 files in other folders)
